--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
     }
 
     function isAFactor(z, w) {
-        if (w % z == 0)
-        return true;
+        if (w % z == 0) {
+            return true;
+        } else {
+            return false;
+        }
     }
 
     function newSum(sum, x) {
